fix(storybook): Add better margins and gaps to the inpu-group-advanced-password element Card: https://app.clickup.com/t/861n5bzh6

--- a/src/styles/globals/form/_input-group-advanced-password.css
+++ b/src/styles/globals/form/_input-group-advanced-password.css
@@ -1,13 +1,16 @@
 .input-group-advanced-password {
     display: grid;
     justify-content: initial;
-    grid-gap: var(--input-group-margin-between);
 }
 
 .input-group-advanced-password__group {
     width: 100%;
     display: grid;
     position: relative;
+}
+
+.input-group-advanced-password__group + .input-group-advanced-password__group {
+    margin-top: var(--input-group-margin-between);
 }
 
 .input-group-advanced-password .input-group-advanced-password__group:nth-child(2)::after {
